# wifi_localization

./: README.md
wifi_localization_cpp/: CMakeLists.txt  package.xml
wifi_localization_cpp/Net/: CNN-net.onnx
wifi_localization_cpp/src/: WIFI-Loc.cpp
